--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,17 +13,12 @@ html {
     color: white;
 }
 
-header {
-    background: linear-gradient(180deg, #102347 0%, #181818 100%);
-    height: 220px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#sales {
+    margin: 40px 10px;
 }
 
-a,
-a:hover,
-a:visited {
-    color: unset;
-    text-decoration: none;
+.dsmeta-container {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
 }
